made things look better

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git101 KUST</title>
   </head>
-  <body>
+  <body style="text-align: center; font-size: 2rem;">
     <h2>Hello World</h2>
-    <p>Learning basics of git</p>
-    <br />
+    <p>#<i> Learning basics of git </i></p>
     <br />
     <h6>Abdul Kareem</h6>
   </body>
